Closed
Bug 1214267
Opened 10 years ago
Closed 10 years ago
Top Header bar of websites tends to move/float during scrolling when Full-Screen Mode is enabled
Categories
(Firefox for Android Graveyard :: Toolbar, defect)
Tracking
(firefox42 affected, firefox43+ wontfix, firefox44+ fixed, firefox45+ fixed, fennec+, firefox63 unaffected)
RESOLVED
FIXED
Firefox 45
People
(Reporter: bullionareboy, Assigned: kats)
References
Details
Attachments
(4 files)
|
731.66 KB,
image/png
|
Details | |
|
9.76 KB,
patch
|
mattwoodrow
:
review+
|
Details | Diff | Splinter Review |
|
2.75 KB,
patch
|
mattwoodrow
:
review+
|
Details | Diff | Splinter Review |
|
12.17 KB,
patch
|
ritu
:
approval-mozilla-aurora+
|
Details | Diff | Splinter Review |
User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:44.0) Gecko/20100101 Firefox/44.0
Build ID: 20151013030225
Steps to reproduce:
Have Full Screen Mode enabled
1. Go to: http://www.engadget.com/
2. Start scrolling slowly without lifting finger.
3. Notice the header bar of the website moving away from its fixed top position.
Actual results:
The Header Bar of the website floats away from its fixed position
Expected results:
The Header Bar of the website should stay fixed on its top position even in Full Screen Mode
Happens on www.techcrunch.com as well and many other side that implement this form of layout
Issue listed on webcompat as well - https://webcompat.com/issues/1560
Additional Info:
Happens on both beta FF42 and Nightly FF44
Device:
Moto G 2nd Gen Lollipop 5.0.2
How do you activate Full Screen Mode?
Flags: needinfo?(bullionareboy)
(In reply to Michael Comella (:mcomella) from comment #1)
> How do you activate Full Screen Mode?
3-dot "Hamburger" menu > Settings > Display > Full-Screen browsing
Flags: needinfo?(bullionareboy)
I can see this on my N5 & GS5.
Status: UNCONFIRMED → NEW
tracking-fennec: --- → ?
Ever confirmed: true
Comment 4•10 years ago
|
||
Kats, do you have a plan for these types of scenarios?
Flags: needinfo?(bugmail.mozilla)
| Assignee | ||
Comment 5•10 years ago
|
||
A quick investigation shows that the nav element has position:fixed;top:-2px and the -2 is causing our code to not treat it as a fixed-pos element. Most likely the anchor on the fixed position layer is being misinterpreted. Assigning to myself to find a fix for this.
Assignee: nobody → bugmail.mozilla
Flags: needinfo?(bugmail.mozilla)
| Assignee | ||
Updated•10 years ago
|
Component: General → Graphics, Panning and Zooming
Updated•10 years ago
|
tracking-fennec: ? → +
This issue seems to happen without the full screen mode enabled as well.
Issue occurs here - http://www.popsci.com/new-horizons-spacecraft-discovers-polar-cap-pluto-and-more
Firefox 45
| Assignee | ||
Comment 7•10 years ago
|
||
This bug only affects Fennec because the dynamic toolbar allows a compositor-side viewport resizing. We want to keep fixed-pos items fixed during the async state, and to do that we need to know which side they're fixed to. We were inferring it from the anchor but that doesn't always work so this patch makes it more explicit.
Attachment #8685437 -
Flags: review?(matt.woodrow)
| Assignee | ||
Updated•10 years ago
|
status-firefox42:
--- → affected
status-firefox43:
--- → affected
status-firefox44:
--- → affected
status-firefox45:
--- → affected
Comment 8•10 years ago
|
||
Comment on attachment 8685437 [details] [diff] [review]
Patch
Review of attachment 8685437 [details] [diff] [review]:
-----------------------------------------------------------------
::: gfx/layers/composite/AsyncCompositionManager.cpp
@@ +293,4 @@
> translation.x += aFixedLayerMargins.left;
> }
>
> + if ((sides & eSideBitsTopBottom) == eSideBitsTopBottom) {
indent
Attachment #8685437 -
Flags: review?(matt.woodrow) → review+
Comment 10•10 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → Firefox 45
| Assignee | ||
Comment 11•10 years ago
|
||
I screwed up the other patch, the "sides" value wasn't actually getting sent across to the compositor. Whoops!
Attachment #8686634 -
Flags: review?(matt.woodrow)
Updated•10 years ago
|
Attachment #8686634 -
Flags: review?(matt.woodrow) → review+
| Assignee | ||
Comment 13•10 years ago
|
||
reopening to land the follow-up.
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Comment 14•10 years ago
|
||
Comment 15•10 years ago
|
||
| bugherder | ||
Status: REOPENED → RESOLVED
Closed: 10 years ago → 10 years ago
Resolution: --- → FIXED
Comment 16•10 years ago
|
||
[Tracking Requested - why for this release]: regression with a fix
Kats would this patch be safe to uplift?
tracking-firefox43:
--- → ?
tracking-firefox44:
--- → ?
tracking-firefox45:
--- → ?
Flags: needinfo?(bugmail.mozilla)
| Assignee | ||
Comment 17•10 years ago
|
||
I think it should be ok to uplift to Aurora. I think it's a little risky for beta. I'll make an uplift patch and flag it.
Flags: needinfo?(bugmail.mozilla)
| Assignee | ||
Comment 18•10 years ago
|
||
Approval Request Comment
[Feature/regressing bug #]: been this way for a long time
[User impact if declined]: on some websites fixed-position items don't move smoothly while panning. Specifically this would affect fixed-pos items with negative positioning.
[Describe test coverage new/current, TreeHerder]: tested locally
[Risks and why]: Low/medium risk. This code is not as well understood since it hasn't been touched in a while. The patch itself is relatively straightforward even though it looks "large" because most of it is just propagating data around.
[String/UUID change made/needed]: none
Attachment #8689658 -
Flags: approval-mozilla-aurora?
Comment 19•10 years ago
|
||
bull500, would you be able to verify that this issue is fixed as expected on the latest Nightly build? Thanks.
Flags: needinfo?(bullionareboy)
Comment 20•10 years ago
|
||
Tracked for FF44 and requesting QE team to verify the fix on Fennec builds if this issue is easy to reproduce.
Flags: qe-verify+
Comment 21•10 years ago
|
||
Comment on attachment 8689658 [details] [diff] [review]
Rollup patch for aurora
This fix has been on Nightly for 2 weeks or so now and given that this is needed to properly fix the original issue, taking it for Aurora44.
Attachment #8689658 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
| Reporter | ||
Comment 22•10 years ago
|
||
(In reply to Ritu Kothari (:ritu) from comment #19)
> bull500, would you be able to verify that this issue is fixed as expected on
> the latest Nightly build? Thanks.
yup! This works great on the latest Nightly build (2015-11-23)
Thank you everyone! :D
Flags: needinfo?(bullionareboy)
Comment 23•10 years ago
|
||
| bugherder uplift | ||
Comment 24•10 years ago
|
||
Marking wontfix for 43 based on comment 17. We could have given it a try earlier, but this late in beta it doesn't seem like a good idea.
Updated•10 years ago
|
Comment 25•7 years ago
|
||
Hi,
I was not able to reproduce the issue.
Tested with:
Browser / Version: Firefox Mobile Nightly 63.0a1 (2018-08-19)
Operating System: Oneplus Two (Android 6.0.1)
Thank you!
status-firefox63:
--- → unaffected
Updated•7 years ago
|
Flags: qe-verify+
Updated•5 years ago
|
Product: Firefox for Android → Firefox for Android Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•